--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@ export const prerender = true
       >
       <a
         class="ml-2 <sm:hidden"
-        href="https://github.com/ourongxing/chatgpt-vercel"
+        href="https://github.com/ou"
       >
         <img
           alt="GitHub forks badge"
