--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,17 +22,17 @@ export const prerender = true
       >
       <a
         class="ml-2 <sm:hidden"
-        href="https://github.com/ou"
+        href="1"
       >
         <img
           alt="GitHub forks badge"
-          src="https://img.shields.io/github/stars/ourongxing/chatgpt-vercel?logo=github"
+          src="1"
         />
       </a>
-      <a class="ml-2" href="https://github.com/ourongxing/chatgpt-vercel/fork">
+      <a class="ml-2" href="1">
         <img
           alt="GitHub forks badge"
-          src="https://img.shields.io/github/forks/ourongxing/chatgpt-vercel?logo=github"
+          src="1"
         />
       </a>
     </div>
